fixed graph scroll on iOS

--- a/src/pages/field-detail/field-detail.scss
+++ b/src/pages/field-detail/field-detail.scss
@@ -23,21 +23,11 @@ page-field-detail {
         }
     }
 
-    .chartWrapper > canvas {
-        position: absolute;
-        left: 0;
-        top: 0;
-        pointer-events:none;
-    }
-
     .chartAreaWrapper {
         overflow-x: scroll;
-        position: relative;
-        width: 100%;
     }
 
     .chartAreaWrapper2 {
-        position: relative;
         min-height: 250px;
     }
 }
